kustomize/overlays/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-05218e5591209bbca, subnet-02e6cd02e7adf2747
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: dev-sample-app
            port:
              number: 80
        path: /
